--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-pdf/renderer": "^4.3.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.507.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
+    "react-to-print": "^3.1.0",
     "react-toastify": "^11.0.5",
     "xlsx": "^0.18.5"
   },
